<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.generalwalletprofile.statement.FullStatement">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_statement_title"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/txtGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_side"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/medium_side"
       app:layout_constraintTop_toBottomOf="@id/tvTitle"
        style="@style/MyTextInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemaiilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" Enter email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_startdate"
        android:id="@+id/tvTitleStartDate"
        app:layout_constraintTop_toBottomOf="@id/tlAmount"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/main_side"
        app:endIconMode="custom"
        app:endIconTint="@color/lightGray"

        app:endIconCheckable="true"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|start"
        android:hint="@string/end_date_hint"
        android:inputType="date"
        android:lines="1"
        android:textSize="16sp"
        android:backgroundTint="@color/lightGray"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStartDate"
        style="@style/MyTextInputLayout"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:id="@+id/tvEnddatetitle"
        app:layout_constraintTop_toBottomOf="@id/etStartDate"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/main_side"
        app:endIconMode="custom"
        app:endIconCheckable="true"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|start"
        android:hint="@string/end_date_hint"
        android:inputType="date"
        android:lines="1"
        android:textSize="16sp"
        android:backgroundTint="@color/lightGray"
        app:layout_constraintTop_toBottomOf="@id/tvEnddatetitle"
        style="@style/MyTextInputLayout"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuyAirtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_top"
        android:layout_marginBottom="50dp"
        android:paddingBottom="@dimen/main_top"
        android:padding="10dp"
        android:text="@string/submit"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/etEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/primary_button"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>