<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/bg"
    android:backgroundTint="@color/colorDivider"
    >
    <include
        layout="@layout/transfer_layout_top"
        android:id="@+id/mainLayoutToolbar"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLayoutToolbar"
        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@mipmap/otp_icon"
            android:layout_margin="@dimen/main_side"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/imgOtp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/black"
            android:id="@+id/tvVerificatioTitle"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvVerificatioTitle"
            android:text="@string/please_enter_digit_otp"
            android:textSize="18sp"
            android:id="@+id/tvEnterotp"
            android:layout_marginTop="@dimen/medium_side"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/otp_to_your_number"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvPhoneNo"
            android:layout_margin="@dimen/medium_side"
            app:layout_constraintTop_toBottomOf="@id/tvEnterotp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNo"
            android:singleLine="true"
            android:textColorHighlight="@color/primary_green"
            android:id="@+id/edtOtp"
            android:focusableInTouchMode="true"
            android:textColor="@color/primary_green"
            app:layout_constraintStart_toStartOf="@id/tvPhoneNo"
            app:layout_constraintEnd_toEndOf="@id/tvPhoneNo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtOtp"
            android:text="@string/otp_expire"
            android:layout_marginTop="@dimen/medium_side"
            android:textSize="14sp"
            android:id="@+id/tvOtpexpireTitle"
            android:layout_marginStart="@dimen/main_top"
            android:textColor="@color/txtGray"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerifyOtp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_top"
            android:layout_marginBottom="50dp"
            android:paddingBottom="@dimen/main_top"
            android:padding="10dp"
            android:text="@string/verify"
            app:cornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvOtpexpireTitle"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/MaterialConfirmationButtonDefaultStyle"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
